--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages.
+<a href "https://storage.cloud.google.com/draftkings/lineups/dk_lineups_20190505.csv">click here for lineups</a>
+</p>
 </body>
 </html>
