--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Daily MLB DFS Lineups</h1>
+<h2>WARNING: All predictions and optimizations are my own, please use at your own risk!</h2>
 <p>
 <a href="https://storage.cloud.google.com/draftkings/lineups/daily_dk_lineups.csv">click here for lineups</a>
 </p>
