adding lineup export

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <h2>WARNING: All predictions and optimizations are my own, please use at your own risk!</h2>
 <p>
 <a href="https://storage.cloud.google.com/draftkings/lineups/daily_dk_lineups.csv">click here for lineups</a>
+<br>
+<a href="https://storage.cloud.google.com/draftkings/lineups/daily_export_dk_lineups.csv">click here for lineup export</a>
 </p>
 </body>
 </html>
