--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Daily MLB DFS Lineups</h1>
 <h2>WARNING: Please use at your own risk.</h2>
-<p>
+<p style = "font-family:georgia,garamond,serif;font-size:16px;">
 Updates daily at 11am eastern time.
 <br>
 <a href="https://storage.cloud.google.com/draftkings/lineups/daily_dk_lineups.csv">click here for lineups</a>
