adding update note

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Daily MLB DFS Lineups</h1>
 <h2>WARNING: Please use at your own risk.</h2>
 <p style = "font-family:georgia,garamond,serif;font-size:16px;">
-Updates daily at 11am eastern time.
+Updates based on incoming information leading to game time, so please check back for most recent update right before first pitch.
 <br>
 <a href="https://storage.cloud.google.com/draftkings/lineups/daily_dk_lineups.csv">click here for lineups</a>
 </br>
