adding lineup generation button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ Updates based on incoming information leading to game time, so please check back
 <br>
 <a href="https://storage.cloud.google.com/draftkings/lineups/daily_dk_lineups.csv">click here for lineups</a>
 </br>
+<br>
+<a href="https://us-central1-scarlet-labs.cloudfunctions.net/dk_lineup">click here to generate lineups</a>
+</br>
 </p>
 </body>
 </html>
